Version 0.5 (...)

- Enhanced grizzled.config.Configuration with a forMatchingSections()
  method that allows simple looping over sections that match a regular
  expression.
- grizzled.config.Configuration now supports an alternative to the option()
  methods: a get() method that returns Option[String] and does not throw
  exceptions.

---------------------------------------------------------------------------
Version 0.4.2 (7 April, 2010)

- Updated to SBT version 0.7.3.
- Added withDownloadedFile() to grizzled.net.url, to execute a block on
  a downloaded URL.
- The grizzled.io.implicits module has been replaced by individual 
  modules, for more granular scope control (e.g.,
  grizzled.io.RichInputStream, grizzled.io.RichReader)
- The grizzled.io package has been split into individual source files.
- Added new grizzled.io.SourceReader class that wraps a scala.io.Source inside
  a java.io.Reader.

---------------------------------------------------------------------------
Version 0.4.1 (11 March, 2010)

- Fixed inadvertent bug in grizzled.cmd command handling, when commands
  span multiple lines.

---------------------------------------------------------------------------
Version 0.4 (11 March, 2010)

- Added grizzled.collection.GrizzledLinearSeq and related implicits, as a place
  to put additional methods for sequences.
- Added grizzled.collection.GrizzledLinearSeq.columnarize(), which takes a
  sequence (e.g., a list), converts its contents to strings, and returns a
  single string with the sequence's contents arranged in columns.
- Rearranged the locations of various implicit functions, so callers can
  have finer-grained control over which ones are in scope.
- grizzled.editline.EditLine now shows its completions in columnar format.
- Added BlockCommandHandler to grizzled.cmd, to handle commands consisting
  of blocks of lines between a start and end line.
- Added HiddenCommandHandler to grizzled.cmd, allowing special commands that