@@ -4,3 +4,7 @@
 * `grizzled.config.Configuration` now supports an alternative to the `option()`
   methods: a `get()` method that returns `Option[String]` and does not throw
   exceptions.
+* `grizzled.config.Configuration` now supports a `setOption()` method that
+  overwrites an option value, if it exists already, instead of throwing a
+  `DuplicateOptionException`, as `addOption()` does.
+
